# apres

./: .travis.yml  ApresUnitTest.kt  Cargo.toml  README.md  build_arch.py  kotlin.kt
bindings/: Cargo.toml  buildscript.py
bindings/src/: lib.rs
bindings/src/python_bindings/: __init__.py
examples/: controller.rs
rust/src/controller/: mod.rs
src/: MIDILike.py  apres_controller.rs  controller.rs  lib.rs  main.rs  tests.rs
src/controller/: mod.rs
src/controller/platform/: mod.rs
src/controller/platform/unix/: mod.rs
src/controller/platform/windows/: mod.rs
src/lib/: .midi.rs.swp  midi.rs
src/python_bindings/: __init__.py
