[package]
name = "apres"
version = "0.3.0"
authors = ["Quintin Smith <smith.quintin@protonmail.com>"]
edition = "2018"
description = "MIDI Library"
repository = "https://github.com/quintinfsmith/apres"
license = "GPL-2.0-or-later"
categories = ["MIDI"]
keywords = ["midi", "audio", "music"]

[lib]
name = "apres"
crate-type = ["rlib"]

