[package]
name = "apres"
version = "0.3.4"
authors = ["Quintin Smith <smith.quintin@protonmail.com>"]
edition = "2018"
description = "MIDI Library"
repository = "https://burnsomni.net/git/apres"
homepage = "https://burnsomni.net/software/apres"
license = "GPL-2.0-or-later"
categories = ["MIDI"]
keywords = ["midi", "audio", "music"]

[lib]
name = "apres"
crate-type = ["rlib"]

[dependencies]
libc = "0.2"
