[package]
name = "apres"
version = "0.3.4"
authors = ["Quintin Smith <smith.quintin@protonmail.com>"]
edition = "2018"
description = "MIDI Library"
repository = "https://burnsomni.net/git/apres"
homepage = "https://burnsomni.net/software/apres"
license = "GPL-2.0-or-later"
categories = ["MIDI"]
keywords = ["midi", "audio", "music"]

[lib]
name = "apres"
crate-type = ["rlib"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Media",
    "Win32_Media_Audio",
]
