[package]
name = "apres_bindings"
version = "0.3.19"
authors = ["Quintin Smith <smith.quintin@protonmail.com>"]
edition = "2018"
description = "External bindings for apres MIDI library"
license-file = "LICENSE"

[dependencies]
apres = { path = "../rust/" }

[lib]
name = "apres_bindings"
crate-type = ["cdylib"]

